# ModFall

./: .gitignore  Makefile  README.md  gradle.properties  settings.gradle.kts  translate.py
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  openmpt_jni.c
app/src/main/res/drawable/: ic_launcher_foreground.xml  splash_background.xml
app/src/main/res/raw/: third_party_licenses.txt
app/src/main/res/values/: colors.xml  (+3 more)
docs/: milestones.md  plan.md  play-store-release-signing.md
docs/change-requests/: m3-change-request-summary.md  m3-change-request.md  main-ui-settings-retro-controls.md  ui-styling-change.md
docs/features/: 01-mod-player.md
docs/fix-requests/: 01-ui-fix.md  02-rotation-bug.md  03-gesture-bug.md  04-das-threshold-bug.md  05-splash-zoom-bug.md  06-splash-artwork.md  07-m7-music-library-review.md  08-m7-music-library-review-2.md  09-music-library-scan-and-reload.md  10-music-library-scan-and-reload-review.md  11-mediastore-api33-invisible-files.md  12-saf-fix-review.md  13-saf-fix-review-2.md  14-saf-fix-review-3.md  15-playtrack-started-guard-silent-fail.md  16-playtrack-main-thread-blocking.md  17-playtrack-main-thread-review.md  18-libc++shared-missing-from-apk.md  19-main-ui-settings-retro-controls-review.md  20-translation-audit.md
docs/milestones/: m1-scaffold.md  m2a-movement.md  m2b-scoring.md  m3-rendering.md  m4-polish.md  m5-localisation.md  m6-mod-music.md  m7-music-library-screen.md  playtest-gate.md
scripts/: build-libopenmpt.sh
(+149 files in other folders)
